--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="container-fluid myContainer h-100">
+<div class="container-fluid myContainer h-100 p-0">
   <router-outlet></router-outlet>
 </div>
