--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -1,1 +1,9 @@
-<p>search works!</p>
+<div class="mySearch d-flex flex-row align-items-end">
+  <div class="myInput-group w-75">
+    <label for="" class="myInput__label">Escribe un nombre:</label>
+    <input type="text" class="myInput b-radius-0 form-control" placeholder="Luke skywalker" aria-label="Recipient's username" aria-describedby="button-addon2">
+  </div>
+  <div class="w-25">
+    <button style="height: 45px;" class="myBtn__primary b-radius-0" type="button">Buscar</button>
+  </div>
+</div>
