--- a/src/assets/css/myStyle.css
+++ b/src/assets/css/myStyle.css
@@ -1,3 +1,8 @@
+/* line 11, assets/scss/extra/_utilities.scss */
+.b-radius-0 {
+  border-radius: 0px !important;
+}
+
 /* line 1, assets/scss/atoms/_titles.scss */
 .myText {
   color: #fff;
@@ -145,6 +150,45 @@
   font-family: 'Lato', sans-serif;
 }
 
+/* line 1, assets/scss/molecules/_search.scss */
+.mySearch {
+  width: 100%;
+  margin: 10px auto;
+}
+
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  /* line 1, assets/scss/molecules/_search.scss */
+  .mySearch {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  /* line 1, assets/scss/molecules/_search.scss */
+  .mySearch {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  /* line 1, assets/scss/molecules/_search.scss */
+  .mySearch {
+    width: 40%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  /* line 1, assets/scss/molecules/_search.scss */
+  .mySearch {
+    width: 40%;
+  }
+}
+
+/* line 16, assets/scss/molecules/_search.scss */
+.mySearch .myBtn__primary {
+  font-size: 12px;
+}
+
 /* line 1, assets/scss/organisms/_login.scss */
 .myLogin {
   width: 90%;
@@ -207,13 +251,13 @@
           filter: blur(15px);
 }
 
-/* line 17, assets/scss/myStyle.scss */
+/* line 19, assets/scss/myStyle.scss */
 html {
   font-size: 14px;
   height: 100%;
 }
 
-/* line 21, assets/scss/myStyle.scss */
+/* line 23, assets/scss/myStyle.scss */
 body {
   background-color: #060C21;
   height: 100%;
