Agregando cards y efectos visuales
Se agregan cards para mostrar info segun el personaje

Se agregan efectos visuales

Se ajustan variables scss

--- a/src/app/components/pages/personajes/personajes.component.html
+++ b/src/app/components/pages/personajes/personajes.component.html
@@ -1,1 +1,15 @@
-<p>personajes works!</p>
+<div class="separator animated fadeIn">
+  <div class="mySubtitle">
+    personajes
+  </div>
+  <div class="line lightSaber"></div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <app-tarjeta class="col-3 myCard"></app-tarjeta>
+    <app-tarjeta class="col-3 myCard"></app-tarjeta>
+    <app-tarjeta class="col-3 myCard"></app-tarjeta>
+    <app-tarjeta class="col-3 myCard"></app-tarjeta>
+  </div>
+</div>
