--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="mySearch d-flex flex-row align-items-end">
+<div class="mySearch d-flex flex-row align-items-end animated fadeInDown">
   <div class="myInput-group w-75">
     <label for="" class="myInput__label">Escribe un nombre:</label>
     <input type="text" class="myInput b-radius-0 form-control" placeholder="Luke skywalker" aria-label="Recipient's username" aria-describedby="button-addon2">
