--- a/src/app/components/shared/tarjeta/tarjeta.component.html
+++ b/src/app/components/shared/tarjeta/tarjeta.component.html
@@ -1,1 +1,15 @@
-<p>tarjeta works!</p>
+  <div class="box animated fadeInUp slow">
+    <div class="info">
+      <div class="title">
+        <span>Darth Vader</span>
+      </div>
+      <div class="action">
+        <button type="button" class="myBtn__primary">
+          Mostrar Info
+        </button>
+      </div>
+    </div>
+    <div class="photo">
+      <img src="/assets/img/full/people/4.jpg" alt="">
+    </div>
+  </div>
