--- a/src/assets/scss/extra/_variables.scss
+++ b/src/assets/scss/extra/_variables.scss
@@ -1,6 +1,9 @@
 $c-base: #060C21;
+$c-base-l1: #252A3D;
 
 $c-light-side: #2196f3;
 $c-dark-side: #F00000;
 
 $c-primary: #FDC502;
+
+$c-green: #2DD100;
