--- a/src/assets/scss/myStyle.scss
+++ b/src/assets/scss/myStyle.scss
@@ -3,6 +3,7 @@
 @import 'extra/variables';
 @import 'extra/utilities';
 @import 'extra/effects';
+@import 'extra/myAnimations';
 
 @import 'atoms/titles';
 @import 'atoms/button';
@@ -11,6 +12,8 @@
 @import 'molecules/alert';
 @import 'molecules/navbar';
 @import 'molecules/search';
+@import 'molecules/separator';
+@import 'molecules/tarjeta';
 
 @import 'organisms/login';
 
