--- a/src/assets/scss/extra/_effects.scss
+++ b/src/assets/scss/extra/_effects.scss
@@ -23,3 +23,8 @@
     filter: blur($value + px);
   }
 }
+
+@mixin borderShadow($value) {
+  border: 2px solid $value;
+  box-shadow: 0px 0px 10px 1px $value;
+}
