--- a/src/app/components/shared/tarjeta/tarjeta.component.html
+++ b/src/app/components/shared/tarjeta/tarjeta.component.html
@@ -1,15 +1,15 @@
-  <div class="box animated fadeInUp slow">
+  <div class="box animated fadeIn slow">
     <div class="info">
       <div class="title">
-        <span>Darth Vader</span>
+        <span>{{ titulo }}</span>
       </div>
       <div class="action">
-        <button type="button" class="myBtn__primary">
+        <button type="button" class="myBtn__primary" data-toggle="modal" data-target="#exampleModal">
           Mostrar Info
         </button>
       </div>
     </div>
     <div class="photo">
-      <img src="/assets/img/full/people/4.jpg" alt="">
+      <img src="/assets/img/full/{{ urlImagen }}.jpg" alt="">
     </div>
   </div>
