--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,11 +1,4 @@
 <app-navbar></app-navbar>
 <div class="container-fluid p-4">
-  <div class="row">
-    <div class="col-12">
-      <app-search></app-search>
-    </div>
-    <div class="col-12">
-      <app-personajes></app-personajes>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
