--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="myNavbar navbar navbar-expand-lg navbar-dark px-4" style="background-color: #252A3D;">
+<nav class="myNavbar navbar sticky-top navbar-expand-lg navbar-dark px-4" style="background-color: #252A3D;">
   <a class="navbar-brand" href="#">
     <img src="/assets/img/logo-star-wars.png" width="80" alt="">
   </a>
@@ -7,11 +7,11 @@
   </button>
   <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Peliculas</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="'peliculas'">Peliculas</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Personajes</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="'personajes'">Personajes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Planetas</a>
