--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -1,9 +1,20 @@
-<div class="mySearch d-flex flex-row align-items-end animated fadeInDown">
+<form autocomplete="on"
+  [formGroup]="myFormSearch"
+  (ngSubmit)="buscar()"
+  class="mySearch d-flex flex-row align-items-end animated fadeInDown">
   <div class="myInput-group w-75">
-    <label for="" class="myInput__label">Escribe un nombre:</label>
-    <input type="text" class="myInput b-radius-0 form-control" placeholder="Luke skywalker" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <label for=""
+      class="myInput__label">Escribe un nombre:</label>
+    <input type="text"
+      formControlName="busqueda"
+      class="myInput b-radius-0 form-control"
+      [placeholder]="placeholder"
+      aria-label="Recipient's username"
+      aria-describedby="button-addon2">
   </div>
   <div class="w-25">
-    <button style="height: 45px;" class="myBtn__primary b-radius-0" type="button">Buscar</button>
+    <button style="height: 45px;"
+      class="myBtn__primary b-radius-0"
+      type="submit">Buscar</button>
   </div>
-</div>
+</form>
